Update issue templates

--- a/.github/ISSUE_TEMPLATE/------.md
+++ b/.github/ISSUE_TEMPLATE/------.md
@@ -1,21 +1,19 @@
 ---
-name: 要望レポート
-about: 今後発生するであろう問題を提起する
+name: バグレポート
+about: レポートを作成して改善に役立てる
 title: ''
-labels: ''
+labels: バグ
 assignees: ''
 
 ---
 
-## 目的
+## 概要
 - 
-## Taskリスト
+## 再現手順
 - 
-## Doneの定義
+## 修正しないとどう困るか
 - 
-## 参考
+## 原因
 - 
-## 留意事項
-- 
-## 検討事項
+## 修正案
 -
