Update issue templates

--- a/.github/ISSUE_TEMPLATE/------.md
+++ b/.github/ISSUE_TEMPLATE/------.md
@@ -1,19 +1,21 @@
 ---
-name: バグレポート
-about: レポートを作成して改善に役立てる
+name: 要望レポート
+about: 今後発生するであろう問題を提起する
 title: ''
-labels: バグ
+labels: ''
 assignees: ''
 
 ---
 
-## 概要
+## 目的
 - 
-## 再現手順
+## Taskリスト
 - 
-## 修正しないとどう困るか
+## Doneの定義
 - 
-## 原因
+## 参考
 - 
-## 修正案
+## 留意事項
+- 
+## 検討事項
 -
